--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "application that helps to memorize words in smart way",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.22.0",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-validator": "^7.2.0",
+    "morgan": "^1.10.0",
     "prisma": "^5.22.0"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2"
   }
 }
